--- a/src/main/resources/application-container.yml
+++ b/src/main/resources/application-container.yml
@@ -5,12 +5,12 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: create
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/teste_gft
+    url: jdbc:postgresql://postgresql-db:5432/teste_gft
     username: postgres
     password: postgres
     
 data:
-  path: src/main/resources/massa/
+  path: /app/massa/
